app/src/main/java/com/example/windows/data/models/errors/UserResponse.kt
package com.example.windows.data.models.errors

data class UserResponse(val id: String, val name: String)